--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <% if user_signed_in? %>
 
       <li>
-        <%= link_to 'Books', new_book_path %>
+        <%= link_to 'Books', books_path %>
       </li>
 
       <li>
