--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,12 @@
 <h2>Book detail</h2>
 
  <div>
+  <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p>
   <p>Title：<%= @book.title %></p>
   <p>説明：<%= @book.body %></p>
+  <p>ユーザーネーム：<%= @book.user.name %></p>
+  <% if @book.user == current_user %>
+    <%= link_to "edit", edit_book_path(@book) %>
+    <%= link_to "destroy", book_path(@book), method: :delete %>
+  <% end %>
  </div>
