--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,33 @@
 
     <h4>Title</h4>
       <%= f.text_field :title %>
-    <h4>説明</h4>
+    <h4>Opinion</h4>
       <%= f.text_area :body %>
     <%= f.submit 'Create Book' %>
   <% end %>
+
+<h2>Book detail</h2>
+
+ <table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+   <%@books.each do |book|%>
+    <tr>
+     <td><%= image_tag 'sample-author1.jpg' %></td>
+     <td><%= link_to book_path(book.id) do %>
+         <%= book.title %>
+         <% end %>
+     </td>
+     <td><%= book.body %></td>
+    </tr>
+
+   <%end%>
+  </tbody>
+ </table>
