--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,15 @@
       </li>
 
       <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      <%= link_to 'Home', user_path(current_user.id) %>
+      </li>
+
+      <li>
+      <%= link_to 'Users', users_path(current_user.id) %>
+      </li>
+
+      <li>
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
       <li>
