--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,24 @@
-<h2>Book detail</h2>
+<h2>User info</h2>
+ <table class='table'>
+  <tr><img class="attachment user profile_image fallback" src="/assets/no_image-72379a4da21cb04a58337cf92d85bc39f8d534cbc78254c2085acaca82236bfa.jpg" /></tr>
+  <tr>
+	  <th>name</th>
+	  <th><%= @user.name %></th>
+  </tr>
+  <tr>
+	  <th>introduction</th>
+	  <th><%= @user.introduction %></th>
+  </tr>
+</table>
 
- <table>
+<% if @user == current_user %>
+    <%= link_to "edit", edit_user_path(@user) %>
+<% end %>
+
+
+
+<h2>Book detail</h2>
+ <table class='table table-hover table-inverse'>
   <thead>
     <tr>
       <th>Title</th>
@@ -20,6 +38,6 @@
      <td><%= book.body %></td>
     </tr>
 
-   <%end%>
+   <% end %>
   </tbody>
  </table>
