--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,6 +7,6 @@
   <p>ユーザーネーム：<%= @book.user.name %></p>
   <% if @book.user == current_user %>
     <%= link_to "edit", edit_book_path(@book) %>
-    <%= link_to "destroy", book_path(@book), method: :delete %>
+    <%= link_to "destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消しますか？" %>
   <% end %>
  </div>
