--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,14 @@
 <h2>User info</h2>
 <%= form_with model:@user do |f| %>
 
- <div>
+  <div>
    <label>Name</label>
    <%= f.text_field :name %>
+  </div>
+
+  <div>
+   <label>Image</label>
+   <%= f.file_field :profile_image %>
   </div>
 
   <div>
@@ -15,4 +20,4 @@
    <%= f.submit 'Update User' %>
   </div>
 
-  <% end %>
+<% end %>
