[Add]共通テンプレート

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'newbook' ,book: @newbook %>
 <h2>Book detail</h2>
 
  <div>
@@ -10,3 +11,5 @@
     <%= link_to "destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消しますか？" %>
   <% end %>
  </div>
+
+
