--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,20 +1,4 @@
-<h1>New book</h1>
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this book from being saved:
-  <ul>
-   <% @book.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-   <% end %>
-  </ul>
-<% end %>
- <%= form_with model: @book do |f| %>
-
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
+<%= render 'newbook' ,book: @newbook %>
 
 <h2>Books</h2>
 
