--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,14 +30,23 @@
         <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
+    　<li>
+        <%= link_to "Home", root_path %>
+      </li>
+
       <li>
-        <%= link_to "新規登録", new_user_registration_path %>
+        <%= link_to "About", about_path %>
+      </li>
+
+      <li>
+        <%= link_to "Sign up", new_user_registration_path %>
       </li>
       <li>
-        <%= link_to "ログイン", new_user_session_path %>
+        <%= link_to "Log in", new_user_session_path %>
       </li>
     <% end %>
    </header>
+   <p id="notice"><%= notice %></p>
    <%= yield %>
   </body>
 </html>
