--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
+<%= render 'books/newbook' ,book: @newbook %>
+
 <h2>User info</h2>
  <table class='table'>
-  <tr><img class="attachment user profile_image fallback" src="/assets/no_image-72379a4da21cb04a58337cf92d85bc39f8d534cbc78254c2085acaca82236bfa.jpg" /></tr>
+  <tr><img class='sample-author1.jpg' /></tr>
   <tr>
 	  <th>name</th>
 	  <th><%= @user.name %></th>
@@ -15,8 +17,6 @@
     <%= link_to "edit", edit_user_path(@user) %>
 <% end %>
 
-
-
 <h2>Books</h2>
  <table class='table table-hover table-inverse'>
   <thead>
@@ -30,7 +30,7 @@
   <tbody>
    <%@books.each do |book|%>
     <tr>
-     <td><%= image_tag 'sample-author1.jpg' %></td>
+     <td><%= image_tag book.user.get_profile_image(100,100) %></td>
      <td><%= link_to book_path(book.id) do %>
          <%= book.title %>
          <% end %>
