--- a/app/views/books/_newbook.html.erb
+++ b/app/views/books/_newbook.html.erb
@@ -5,8 +5,29 @@
     <li><%= message %></li>
    <% end %>
   </ul>
-<% end %>
-<h1>New book</h1>
+ <% end %>
+
+<h2>User info</h2>
+
+ <%= image_tag user.get_profile_image(40,40) %>
+ <table class='table'>
+
+  <tr>
+	  <th>name</th>
+	  <th><%= user.name %></th>
+  </tr>
+  <tr>
+	  <th>introduction</th>
+	  <th><%= user.introduction %></th>
+  </tr>
+ </table>
+ <% if @user == current_user %>
+    <%= link_to "edit", edit_user_path(@user) %>
+ <% end %>
+
+
+
+ <h2>New book</h2>
 <%= form_with model: book do |f| %>
 
     <h4>Title</h4>
@@ -15,3 +36,4 @@
       <%= f.text_area :body %>
     <%= f.submit 'Create Book' %>
   <% end %>
+
