--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'newbook' ,book: @newbook %>
+<%= render 'books/newbook', book: @newbook, user: @user %>
 
 <h2>Books</h2>
 
@@ -14,7 +14,11 @@
   <tbody>
    <%@books.each do |book|%>
     <tr>
-     <td><%= image_tag 'sample-author1.jpg' %></td>
+     <td>
+      <%= link_to user_path(book.user.id) do %>
+      <%= image_tag book.user.get_profile_image(40,40) %>
+      <% end %>
+     </td>
      <td><%= link_to book_path(book.id) do %>
          <%= book.title %>
          <% end %>
