--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <% if user_signed_in? %>
 
       <li>
-        <%= link_to 'Books', books_path %>
+        <%= link_to "Bookers", root_path %>
       </li>
 
       <li>
@@ -27,9 +27,17 @@
       </li>
 
       <li>
+        <%= link_to 'Books', books_path %>
+      </li>
+
+      <li>
         <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
+      <li>
+        <%= link_to "Bookers", root_path %>
+      </li>
+
     　<li>
         <%= link_to "Home", root_path %>
       </li>
@@ -48,5 +56,15 @@
    </header>
    <p id="notice"><%= notice %></p>
    <%= yield %>
+
+   <footer>
+  <div class='container mt-5'>
+    <div class='row'>
+      <div class='mx-auto'>
+        <p>CopyRight Infratop.inc</p>
+      </div>
+    </div>
+  </div>
+ </footer>
   </body>
 </html>
