--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,4 @@
-<%= render 'books/newbook' ,book: @newbook %>
-
-<h2>User info</h2>
- <table class='table'>
-  <tr><img class='sample-author1.jpg' /></tr>
-  <tr>
-	  <th>name</th>
-	  <th><%= @user.name %></th>
-  </tr>
-  <tr>
-	  <th>introduction</th>
-	  <th><%= @user.introduction %></th>
-  </tr>
-</table>
-
-<% if @user == current_user %>
-    <%= link_to "edit", edit_user_path(@user) %>
-<% end %>
+<%= render 'books/newbook', book: @newbook, user: @user %>
 
 <h2>Books</h2>
  <table class='table table-hover table-inverse'>
@@ -30,7 +13,9 @@
   <tbody>
    <%@books.each do |book|%>
     <tr>
-     <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+     <td>
+      <%= image_tag book.user.get_profile_image(40,40) %>
+     </td>
      <td><%= link_to book_path(book.id) do %>
          <%= book.title %>
          <% end %>
