--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
       </li>
 
       <li>
-        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
       <li>
@@ -43,7 +43,7 @@
       </li>
 
       <li>
-        <%= link_to "About", about_path %>
+        <%= link_to "About", root_path %>
       </li>
 
       <li>
