--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,69 +2,106 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-   <header>
-    <% if user_signed_in? %>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <%= link_to root_path do%>
+            <div class="navbar-brand">Bookers</div>
+          <%end%>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li>
+                  <%= link_to user_path(current_user.id) do %>
+                  <div class="nav-link text-light">
+                    <i class="fas fa-home"></i>Home
+                  </div>
+                  <%end%>
+                </li>
 
-      <li>
-        <%= link_to "Bookers", root_path %>
-      </li>
+                <li>
+                  <%= link_to users_path do %>
+                  <div class="nav-link text-light">
+                    <i class ="fas fa-users"></i>Users
+                  </div>
+                  <%end%>
+                </li>
 
-      <li>
-      <%= link_to 'Home', user_path(current_user.id) %>
-      </li>
+                <li>
+                  <%= link_to books_path do%>
+                  <div class="nav-link text-light">
+                    <i class ="fas fa-book-open"></i>Books
+                  </div>
+                  <%end%>
+                </li>
 
-      <li>
-      <%= link_to 'Users', users_path(current_user.id) %>
-      </li>
-
-      <li>
-        <%= link_to 'Books', books_path %>
-      </li>
-
-      <li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "Bookers", root_path %>
-      </li>
-
-    　<li>
-        <%= link_to "Home", root_path %>
-      </li>
-
-      <li>
-        <%= link_to "About", root_path %>
-      </li>
-
-      <li>
-        <%= link_to "Sign up", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "Log in", new_user_session_path %>
-      </li>
-    <% end %>
-   </header>
-   <p id="notice"><%= notice %></p>
-   <%= yield %>
-
-   <footer>
-  <div class='container mt-5'>
-    <div class='row'>
-      <div class='mx-auto'>
-        <p>CopyRight Infratop.inc</p>
+                <li>
+                  <%= link_to destroy_user_session_path, method: :delete do %>
+                  <div class="nav-link text-light">
+                    <i class ="fas fa-sign-out-alt"></i>Log out
+                  </div>
+                  <%end%>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to root_path  do %>
+                    <div class="nav-link text-light">
+                      <i class="fas fa-home "></i>Home
+                    </div>
+                  <%end%>
+                </li>
+                <li>
+                  <%= link_to about_path do %>
+                    <div class="nav-link text-light">
+                      <i class="fas fa-link"></i>About
+                    </div>
+                  <%end%>
+                </li>
+                <li>
+                  <%= link_to new_user_registration_path do %>
+                    <div class="nav-link text-light">
+                      <i class="fas fa-user-plus"></i>Sign up
+                    </div>
+                  <%end%>
+                </li>
+                <li>
+                  <%= link_to  new_user_session_path do %>
+                    <div class="nav-link text-light">
+                      <i class ="fas fa-sign-in-alt"></i>Log in
+                    </div>
+                  <%end%>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <% flash.each do |key, value| %>
+        <p id="notice">
+      <%= value %>
+    </p>
+<% end %>
+    </main>
+    <footer>
+      <div class='container mt-5'>
+        <div class='row'>
+          <div class='mx-auto'>
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
- </footer>
+    </footer>
+    <%= yield %>
   </body>
 </html>
