--- a/app/views/books/_newbook.html.erb
+++ b/app/views/books/_newbook.html.erb
@@ -1,38 +1,43 @@
-<% if book.errors.any? %>
-  <%= book.errors.count %>errors prohibited this book from being saved:
-  <ul>
-   <% book.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-   <% end %>
-  </ul>
- <% end %>
+<div class='col-md-3'>
+  <h2>User info</h2>
+  <%= image_tag user.get_profile_image(40,40) %>
+  <table class = "table">
+    <tbody>
+      <tr></tr>
+      <tr>
+        <th>name</th>
+        <th><%= user.name %></th>
+      </tr>
+      <tr>
+        <th>introduction</th>
+        <th><%= user.introduction %></th>
+      </tr>
+    </tbody>
+  </table>
+  <div class='row'>
+    <%= link_to "Edit", edit_user_path(current_user.id) %>
+  </div>
+  <h2 class="mt-3">New book</h2>
 
-<h2>User info</h2>
-
- <%= image_tag user.get_profile_image(40,40) %>
- <table class='table'>
-
-  <tr>
-	  <th>name</th>
-	  <th><%= user.name %></th>
-  </tr>
-  <tr>
-	  <th>introduction</th>
-	  <th><%= user.introduction %></th>
-  </tr>
- </table>
- <% if @user == current_user %>
-    <%= link_to "edit", edit_user_path(@user) %>
- <% end %>
-
-
-
- <h2>New book</h2>
-<%= form_with model: book do |f| %>
-
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
+  <%= form_with model: book do |f| %>
+    <div class="form-group">
+      <div class ="field_with_errors">
+        <label for ="book-title">Title</label>
+      </div>
+      <div class ="field_with_errors">
+        <%= f.text_field :title %>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="book-opinion">Opinion</label>
+      <div class ="field_with_errors">
+        <%= f.text_area :body %>
+      </div>
+    </div>
+    <div class="form-group">
+      <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
+    </div>
   <% end %>
+
+
+</div>
