--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,27 @@
-<%= render 'books/newbook', book: @newbook, user: @user %>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <%= render 'books/newbook', user: @user, book: @newbook%>
+    <div class='col-md-8 offset-md-1'>
+      <h2>Users</h2>
 
-<h2>Users</h2>
-
- <table>
-  <thead>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-   <%@users.each do |user|%>
-    <tr>
-     <td><%= image_tag user.get_profile_image(40,40) %></td>
-     <td><%= user.name %></td>
-     <td><%= link_to user_path(user.id) do %>show
-         <% end %>
-     </td>
-    </tr>
-
-   <%end%>
-  </tbody>
- </table>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= image_tag user.get_profile_image(40,40) %></td>
+              <td><%= user.name %></td>
+              <td><%= link_to user_path(user.id) do %>Show<%end%></td>
+            </tr>
+          <%end%>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
