--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,29 +1,52 @@
-<h2>Editing book</h2>
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this book from being saved:
-  <ul>
-   <% @book.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-   <% end %>
-  </ul>
+<% flash.each do |key, value| %>
+    <p id="notice">
+      <%= value %>
+    </p>
 <% end %>
-<%= form_with model:@book do |f| %>
 
-  <div>
-   <label>Title</label>
-   <%= f.text_field :title %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <div id ="error_explanation">
+        <% if @book.errors.any? %>
+          <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+      </div>
+
+      <%= form_with model: @book do |f| %>
+        <div class = "form-group">
+          <div class="field_with_errors">
+            <label for ="book_title">
+              Title
+            </label>
+          </div>
+          <div class="field_with_errors">
+            <%= f.text_field :title %>
+          </div>
+
+        </div>
+
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label>
+          <div class="field_with_errors">
+            <%= f.text_area :body %>
+          </div>
+        </div>
+
+        <div class = "form-group">
+          <%= f.submit 'Update Book', class: "btn btn-success" %>
+        </div>
+      <% end %>
+
+      <%= link_to "show", book_path(@book.id) %>
+        |
+      <%= link_to "back", books_path %>
+    </div>
   </div>
-
-  <div>
-   <label>Body</label>
-   <%= f.text_area :body %>
-  </div>
-
-  <div>
-   <%= f.submit 'Update Book' %>
-  </div>
-
-  <% end %>
- <%= link_to "show", book_path(@book.id) %>
-  |
- <%= link_to "back", books_path %>
+</div>
