--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,27 +1,30 @@
-<%= render 'books/newbook', book: @newbook, user: @user %>
-
-<h2>Book detail</h2>
-
-<table class='table'>
- <tr>
-  <td>
-    <%= image_tag @book.user.get_profile_image(40,40) %>
-    <%= link_to @book.user do %>
-     <%= @book.user.name %>
-    <% end %>
-  </td>
-  <td><%= @book.title %></td>
-  <td><%= @book.body %></td>
-  <td>
-    <% if @book.user == current_user %>
-    <%= link_to "edit", edit_book_path(@book) %>
-    <% end %>
-  </td>
-  <td>
-    <% if @book.user == current_user %>
-     <%= link_to "destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消しますか？" %>
-    <% end %>
-  </td>
- </tr>
-
-</table>
+<div class = "container">
+  <div class='row'>
+    <%= render 'newbook', book: @newbook, user: @user %>
+    <div class='col-md-8 offset-md-1'>
+      <h2>Book detail</h2>
+      <table class='table'>
+        <tr>
+          <td>
+            <%= link_to @book.user do %>
+              <%= image_tag @book.user.get_profile_image(40,40) %></br>
+              <%= @book.user.name %>
+            <% end %>
+          </td>
+          <td><%= @book.title %></td>
+          <td><%= @book.body %></td>
+          <td>
+            <% if @book.user == current_user %>
+              <%= link_to "Edit", edit_book_path, class: "btn btn-sm btn-success" %>
+            <% end %>
+          </td>
+          <td>
+            <% if @book.user == current_user %>
+              <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-sm btn-danger" %>
+            <% end %>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
