--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,11 @@
-aboutページ
+<h1 class="px-3 mx-auto">Welcome to <i class="fas fa-book"></i><strong>Bookers</strong>!</h1>
+  </div>
+</div>
+      </main>
+    <footer>
+  <div class='container mt-5'>
+    <div class='row'>
+      <div class='mx-auto'>
+      </div>
+    </div>
+  </div>
