--- a/app/views/books/_newbook.html.erb
+++ b/app/views/books/_newbook.html.erb
@@ -1,6 +1,6 @@
 <div class='col-md-3'>
   <h2>User info</h2>
-  <%= image_tag user.get_profile_image(40,40) %>
+  <%= image_tag user.get_profile_image(63,63) %>
   <table class = "table">
     <tbody>
       <tr></tr>
@@ -15,7 +15,7 @@
     </tbody>
   </table>
   <div class='row'>
-   <%= link_to edit_user_path(current_user.id), class: "btn btn-outline-secondary btn-block" do %>
+   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
    <i class= "fas fa-user-cog"></i>
     <% end %>
   </div>
