--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -44,9 +44,9 @@
         </div>
       <% end %>
 
-      <%= link_to "show", book_path(@book.id) %>
+      <%= link_to "Show", book_path(@book.id) %>
         |
-      <%= link_to "back", books_path %>
+      <%= link_to "Back", books_path %>
     </div>
   </div>
 </div>
