--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,31 +1,46 @@
-<%= render 'books/newbook', book: @newbook, user: @user %>
-
-<h2>Books</h2>
-
- <table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-   <%@books.each do |book|%>
-    <tr>
-     <td>
-      <%= link_to user_path(book.user.id) do %>
-      <%= image_tag book.user.get_profile_image(40,40) %>
+<div class='container px-5 px-sm-0'>
+  <div id ="error_explanation">
+  <% if @newbook.errors.any? %>
+    <%= @newbook.errors.count %>errors prohibited this obj from being saved:
+    <ul>
+      <% @newbook.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
       <% end %>
-     </td>
-     <td><%= link_to book_path(book.id) do %>
-         <%= book.title %>
-         <% end %>
-     </td>
-     <td><%= book.body %></td>
-    </tr>
+    </ul>
+  <% end %>
+  </div>
+  <div class='row'>
+    <%= render 'books/newbook', book: @newbook, user: @user %>
+    <div class='col-md-8 offset-md-1'>
+      <h2>Books</h2>
 
-   <%end%>
-  </tbody>
- </table>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user.id) do %>
+                  <%= image_tag book.user.get_profile_image(40,40) %>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to book_path(book.id) do %>
+                <%= book.title %>
+                <% end %>
+              </td>
+              <td><%= book.body %></td>
+            </tr>
+          <%end%>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
