--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,43 @@
-<h2>User info</h2>
-<%= form_with model:@user do |f| %>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
+      <h2>User info</h2>
+      <div id ="error_explanation">
+        <% if @user.errors.any? %>
+          <h3><%= @user.errors.count %> errors prohibited this obj from being saved:</h3>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+      </div>
 
-  <div>
-   <label>Name</label>
-   <%= f.text_field :name %>
+      <%= form_with model: @user do |f| %>
+        <div class="form-group">
+          <div class="field_with_errors">
+            <label for="user_name">Name</label>
+          </div>
+          <div class="field_with_errors">
+            <%= f.text_field :name%>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="user_image">Image</label>
+          <%= f.file_field :profile_image %>
+        </div>
+
+        <div class="form-group">
+          <label for="user_introduction">Introduction</label>
+          <%= f.text_area :introduction, class: "form-control introduction" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit 'Update User', class: "btn btn-secondary" %>
+        </div>
+      <% end %>
+
+    </div>
   </div>
-
-  <div>
-   <label>Image</label>
-   <%= f.file_field :profile_image %>
-  </div>
-
-  <div>
-   <label>Introduction</label>
-   <%= f.text_area :introduction %>
-  </div>
-
-  <div>
-   <%= f.submit 'Update User' %>
-  </div>
-
-<% end %>
+</div>
